--- a/package/scripts_config.json
+++ b/package/scripts_config.json
@@ -11,18 +11,15 @@
     "field_editor": {
         "input_folder": ".././input",
         "output_folder": ".././output",
-        "field": "weight",
+        "field": "stack_max",
         "adder": 0,
-        "multiplier": 2
+        "multiplier": 0.8
     },
     "merge_json": {
         "input_folder": ".././input",
         "change_folder": ".././change",
         "output_folder": ".././output",
-        "excluded_fields": [
-            "stack_max",
-            "value"
-        ],
+        "excluded_fields": "['stack_max', 'value']",
         "array_merge_strategy": "merge",
         "new_id_strategy": "merge"
     }
